# FiltersMenuPrototypeDemo

./: CMakeLists.txt  README.txt
_build/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MyQtExecutable  build.ninja  cmake_install.cmake  compile_commands.json
headers/: MainMenu.h
source/: MainMenu.cpp  main.cpp
